--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
 ✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
@@ -15,44 +14,240 @@
   min-block-size: 100dvb;
   font-family: var(--font-family), system-ui, sans-serif;
   font-variation-settings: var(--font-weight-txt);
-  background-image: var(--gradient-horisontal),
-  var(--gradient-vertical),
-  var(--gradient);
+  background-image: var(--gradient-horisontal), var(--gradient-vertical),
+    var(--gradient);
   background-size: cover;
   background-attachment: fixed;
   padding: 100px 0;
- 
 }
-
 
 /* ---ШАКПКА--------------------------------------------------------------------------------------------------------------------------- */
 
 .header {
-inline-size: var(--inline-size);
-margin: 0 auto;
-background-color: #FFFFFF;
-padding: clamp(122px, 10vw, 130px) clamp(16px, calc(-21.324px + 9.953vw), 122px);
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 20px;
-border: 2px solid #000;
+  inline-size: var(--inline-size);
+  margin: 0 auto;
+  background-color: var(--background-color);
+  padding: clamp(122px, 10vw, 130px)
+    clamp(16px, calc(-21.676px + 10.047vw), 122px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  border: 2px solid #000;
 }
 
 .header_logo {
   font-family: var(--font-family-accent), system-ui, sans-serif;
-  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-size: clamp(49px, calc(43.366px + 1.502vw), 65px);
+  color: var(--font-color), #000000;
+  line-height: 102%;
 }
 
 .header_title {
-font-family: var(--font-family-accent), system-ui, sans-serif;
-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  font-family: var(--font-family-accent), system-ui, sans-serif;
+  font-size: clamp(14px, calc(10.831px + 0.845vw), 23px);
+  color: var(--font-color);
+  line-height: 100%;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
 /* --- MAIN ------------------------------------------------------------------------------------------------------------------------------------ */
 
 .main {
-margin: 0 auto;
-inline-size: var(--inline-size);
+  margin: 0 auto;
+  inline-size: var(--inline-size);
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 50.3px;
+  padding: 100px 0;
+}
+
+.card {
+  border: 2px solid var(--font-color);
+  background-color: var(--background-color);
+  inline-size: var(--inline-size);
+}
+
+.card_title {
+  font-size: 18px;
+  font-family: var(--font-family), system-ui, sans-serif;
+  color: var(--font-color);
+  padding: 7px 10px 4.5px 10px;
+  font-weight: var(--font-weight-title);
+  line-height: 100%;
+  border-block-end: 2px solid var(--font-color);
+}
+
+@media (width <= 375px) {
+  .card_title {
+    line-height: 111%;
+  }
+}
+
+/* --КОНТЕЙНЕР ДЛЯ КАРТИНКИ----------- */
+
+.container_image {
+  position: relative;
+  block-size: var(--block-size-card);
+  border-block-end: 1px solid var(--font-color);
+}
+
+.card_image {
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.card_label {
+  font-family: var(--font-family-accent), system-ui, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 100%;
+  mix-blend-mode: hard-light;
+  opacity: 70%;
+  position: absolute;
+  color: var(--font-color);
+  top: 25px;
+  right: 25px;
+  text-shadow: -1px -1px 0 var(--background-color),
+    1px -1px 0 var(--background-color), 1px 1px 0 var(--background-color),
+    -1px 1px 0 var(--background-color);
+}
+
+@supports (
+  (text-stroke: 0.7px var(--background-color)) or
+    (-webkit-text-stroke: 0.7px var(--background-color))
+) {
+  .card_label {
+    -webkit-text-stroke: 0.7px var(--background-color);
+    text-stroke: 0.7px var(--background-color);
+    text-shadow: none;
+  }
+}
+
+/* --КОНТЕЙНЕР ДЛЯ ТЕКСТА И КНОПОК------------------------- */
+
+.container_description {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 25px;
+  gap: 25px;
+}
+
+.card_text {
+  font-size: 18px;
+  font-family: var(--font-family), system-ui, sans-serif;
+  color: var(--font-color);
+  line-height: 117%;
+  font-variation-settings: var(--font-weight-txt);
+}
+
+/* ---КОНТЕЙНЕР С КРОПКАМИ----------------------------------------------------- */
+
+.container_btn {
+  display: flex;
+  gap: 12px;
+  justify-content: end;
+}
+
+.card__icon-button {
+  background-color: transparent;
+  border: none;
+  block-size: 27px;
+  padding: 0;
+}
+
+.card__like-button {
+  background-color: transparent;
+  padding: 7px 35px;
+  border: 2px solid var(--font-color);
+  text-align: center;
+}
+
+.button__text {
+  font-family: var(--font-family-accent), system-ui, sans-serif;
+  font-size: 14px;
+  line-height: 100%;
+  font-weight: 400;
+}
+
+/* ---КНОПКА СОХРАНИТЬ НА ПАМЯТЬ------------------------------------------------------------------------------- */
+
+.save_button {
+  background-color: var(--background-color);
+  border: 2px solid var(--font-color);
+  justify-self: center;
+  padding: 15px 18px;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.discetta {
+  inline-size: 21px;
+  block-size: 21px;
+}
+
+@media (width <= 375px) {
+  .save_button {
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .discetta {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+}
+
+/* ---ВСПЫЛВАЮЩЕЕ ОКНО-------------------------------------------------------------------------------------------------------------------------- */
+
+#dialog_discetta {
+  display: none;
+}
+
+#dialog_discetta[open] {
+  inline-size: clamp(341px, 21.0484rem + 1.1268vw, 353px);
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: 1fr min-content;
+  column-gap: 20px;
+  row-gap: 30px;
+  padding: 30px;
+  outline: 2px solid var(--font-color);
+  border: none;
+  overflow: hidden;
+}
+
+@media (width <= 375px) {
+  #dialog_discetta[open] {
+    padding: 30px 40px;
+  }
+}
+
+.dialog_button {
+  grid-column: 1 / 3;
+  justify-self: center;
+  background-color: var(--background-color);
+  padding: 7px clamp(116px, 111.07px + 1.315vw, 130px);
+  inline-size: clamp(261px, 249.732px + 3.0047vw, 293px);
+}
+
+body:has(#dialog_discetta[open]) svg.discetta {
+  inline-size: 39px;
+  block-size: 39px;
+  justify-self: center;
+  align-self: center;
+}
+
+.dialog__text {
+  font-family: var(--font-family-accent), system-ui, sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  font-weight: 400;
+}
+
+#dialog_discetta::backdrop {
+  background-color: rgb(0 0 0 / 0.6);
 }
