--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,4 +8,7 @@
     --gradient-vertical: repeating-linear-gradient( #d3d3d3 0px 2px, rgb(211 211 211 / 0) 2px 4px);
     --gradient: repeating-linear-gradient( #e7e7e7 0.01%, #1a1a1a);
     --inline-size: clamp(375px, calc(260.563px + 30.516vw), 700px);
+    --block-size-card: clamp(371px, calc(255.859px + 30.704vw), 698px);
+    --background-color: #FFFFFF;
+    --font-color: #000000;
 }
