--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--font-family), system-ui, sans-serif;
-  font-variation-settings: var(--font-weight-txt);
+  font-variation-settings: "wght" var(--font-weight-txt);
   background-image: var(--gradient-horisontal), var(--gradient-vertical),
     var(--gradient);
   background-size: cover;
@@ -27,7 +27,7 @@
   inline-size: var(--inline-size);
   margin: 0 auto;
   background-color: var(--background-color);
-  padding: clamp(122px, 10vw, 130px)
+  padding: clamp(120px, 10vw, 128px)
     clamp(16px, calc(-21.676px + 10.047vw), 122px);
   display: flex;
   flex-direction: column;
@@ -41,7 +41,7 @@
   font-family: var(--font-family-accent), system-ui, sans-serif;
   font-size: clamp(49px, calc(43.366px + 1.502vw), 65px);
   color: var(--font-color), #000000;
-  line-height: 102%;
+  line-height: 100%;
 }
 
 .header_title {
@@ -53,7 +53,7 @@
   font-weight: 400;
 }
 
-/* --- MAIN ------------------------------------------------------------------------------------------------------------------------------------ */
+/* --- MAIN --------------------------------------------------------------------------------------------------------------------------- */
 
 .main {
   margin: 0 auto;
@@ -64,10 +64,12 @@
   padding: 100px 0;
 }
 
+/* ---КАРТОЧКИ-------------------------------------------------------------------------- */
+
 .card {
   border: 2px solid var(--font-color);
   background-color: var(--background-color);
-  inline-size: var(--inline-size);
+  inline-size: 100%;
 }
 
 .card_title {
@@ -75,7 +77,7 @@
   font-family: var(--font-family), system-ui, sans-serif;
   color: var(--font-color);
   padding: 7px 10px 4.5px 10px;
-  font-weight: var(--font-weight-title);
+  font-variation-settings: "wght" var(--font-weight-title);
   line-height: 100%;
   border-block-end: 2px solid var(--font-color);
 }
@@ -86,17 +88,48 @@
   }
 }
 
-/* --КОНТЕЙНЕР ДЛЯ КАРТИНКИ----------- */
+/* --КОНТЕЙНЕР ДЛЯ КАРТИНКИ---------------------------------------------------------------- */
 
 .container_image {
   position: relative;
   block-size: var(--block-size-card);
   border-block-end: 1px solid var(--font-color);
+  overflow: hidden;
 }
 
 .card_image {
   inline-size: 100%;
   block-size: 100%;
+}
+
+/* ---ФИЛЬТРЫ КАРТИНОК-------------------------------------------------------------------- */
+
+.img_fear {
+  filter: grayscale(80%) brightness(1.4) contrast(90%);
+}
+
+.img_luck {
+  filter: saturate(380%);
+}
+
+.img_ideal {
+  filter: hue-rotate(30deg);
+}
+
+.img_environment {
+  filter: invert(100%) contrast(60%);
+}
+
+.img_solution {
+  filter: sepia(0.9);
+}
+
+.img_concentration {
+  filter: blur(15px);
+}
+
+.img_end {
+  filter: hue-rotate(85deg) contrast(44%) blur(1.7px) saturate(150%);
 }
 
 .card_label {
@@ -126,7 +159,7 @@
   }
 }
 
-/* --КОНТЕЙНЕР ДЛЯ ТЕКСТА И КНОПОК------------------------- */
+/* --КОНТЕЙНЕР ДЛЯ ТЕКСТА И КНОПОК-------------------------------------------------------- */
 
 .container_description {
   display: grid;
@@ -140,29 +173,141 @@
   font-family: var(--font-family), system-ui, sans-serif;
   color: var(--font-color);
   line-height: 117%;
-  font-variation-settings: var(--font-weight-txt);
+  font-variation-settings: "wght" var(--font-weight-txt);
 }
 
-/* ---КОНТЕЙНЕР С КРОПКАМИ----------------------------------------------------- */
+/* ---КОНТЕЙНЕР С КРОПКАМИ--------------------------------------------------------------- */
 
 .container_btn {
   display: flex;
-  gap: 12px;
+  gap: 6px;
   justify-content: end;
+  align-items: center;
+}
+
+/*СЕРДЦЕ И ЕГО АНИМВЦИЯ------------------------------------------------------------------ */
+
+.contour {
+  fill: var(--contour-color);
+  transition: fill 0.1s linear 0s;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear 0.03s;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s linear 0s;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon:hover {
+  cursor: pointer;
+}
+
+.like-icon:hover .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked {
+  transform-origin: center;
+  animation: larger-heart 0.3s ease-in 0.1s;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s;
 }
 
 .card__icon-button {
   background-color: transparent;
   border: none;
-  block-size: 27px;
+  max-height: 32px;
   padding: 0;
+  transition: outline 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: 2px solid var(--font-color);
 }
 
 .card__like-button {
   background-color: transparent;
-  padding: 7px 35px;
+  padding: 9px 17px 5px 17px;
+  min-inline-size: 130px;
+  max-inline-size: 130px;
   border: 2px solid var(--font-color);
   text-align: center;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.card__like-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 var(--font-color);
+}
+
+.card__like-button::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: var(--font-color);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.card__like-button:hover {
+  cursor: pointer;
+}
+
+.card__like-button:hover::before {
+  transform: translateX(0);
 }
 
 .button__text {
@@ -170,9 +315,13 @@
   font-size: 14px;
   line-height: 100%;
   font-weight: 400;
+  position: relative;
+  color: var(--background-color);
+  mix-blend-mode: difference;
+  z-index: 1;
 }
 
-/* ---КНОПКА СОХРАНИТЬ НА ПАМЯТЬ------------------------------------------------------------------------------- */
+/* ---КНОПКА СОХРАНИТЬ НА ПАМЯТЬ--------------------------------------------- */
 
 .save_button {
   background-color: var(--background-color);
@@ -181,12 +330,45 @@
   padding: 15px 18px;
   display: flex;
   align-items: center;
-  gap: 7px;
+  gap: 8px;
+  position: relative;
+  transition: box-shadow 0.3s ease;
+  overflow: hidden;
+}
+
+.save_button::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: var(--font-color);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.save_button:focus {
+  outline: none;
+}
+
+.save_button:focus-visible {
+  box-shadow: 2px 2px 0 var(--font-color);
+}
+
+.save_button:hover {
+  cursor: pointer;
+}
+
+.save_button:hover::before {
+  transform: translateX(0);
 }
 
 .discetta {
   inline-size: 21px;
   block-size: 21px;
+  stroke: var(--background-color);
+  mix-blend-mode: difference;
 }
 
 @media (width <= 375px) {
@@ -201,14 +383,15 @@
   }
 }
 
-/* ---ВСПЫЛВАЮЩЕЕ ОКНО-------------------------------------------------------------------------------------------------------------------------- */
+/* ---ВСПЫЛВАЮЩЕЕ ОКНО--------------------------------------------------------------------------------------------------------------- */
 
 #dialog_discetta {
   display: none;
 }
 
 #dialog_discetta[open] {
-  inline-size: clamp(341px, 21.0484rem + 1.1268vw, 353px);
+  inline-size: clamp(341px, calc(336.775px + 1.127vw), 353px);
+  min-inline-size: 341px;
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-template-rows: 1fr min-content;
@@ -232,9 +415,40 @@
   background-color: var(--background-color);
   padding: 7px clamp(116px, 111.07px + 1.315vw, 130px);
   inline-size: clamp(261px, 249.732px + 3.0047vw, 293px);
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  overflow: hidden;
 }
 
-body:has(#dialog_discetta[open]) svg.discetta {
+.dialog_button::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: var(--font-color);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.dialog_button:focus {
+  outline: none;
+}
+
+.dialog_button:focus-visible {
+  box-shadow: 2px 2px 0 var(--font-color);
+}
+
+.dialog_button:hover {
+  cursor: pointer;
+}
+
+.dialog_button:hover::before {
+  transform: translateX(0);
+}
+
+.discetta_open-dialog {
   inline-size: 39px;
   block-size: 39px;
   justify-self: center;
@@ -249,5 +463,5 @@ body:has(#dialog_discetta[open]) svg.discetta {
 }
 
 #dialog_discetta::backdrop {
-  background-color: rgb(0 0 0 / 0.6);
+  background-color: rgb(0 0 0 / 0.75);
 }
