Add border in dialog button

--- a/styles/style.css
+++ b/styles/style.css
@@ -419,6 +419,7 @@
   transition: box-shadow 0.3s ease;
   position: relative;
   overflow: hidden;
+  border: 2px solid var(--font-color);
 }
 
 .dialog_button::before {
